Fix showcase images and text display on iOS

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -15,7 +15,7 @@
 
   h1 {
     color: #d6d;
-    font-family: 'Arial Black', sans-serif;
+    font-family: 'Arial Black', 'Helvetica Neue', sans-serif;
     font-size: 4em;
     font-size: 8vmin;
     font-style: italic;
